# dboss-cli

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/dboss/: auth_client.py  cli.py  git_utils.py  ollama_client.py  prompts.py  token_store.py
tests/: test_auth_client.py  test_git_utils.py  test_ollama_client.py  test_prompts.py  test_token_store.py
