[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dboss-cli"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = ["click", "requests"]

[project.scripts]
dboss = "dboss.cli:main"

[project.optional-dependencies]
dev = ["pytest", "pytest-mock"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/dboss"]
