[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dboss-cli"
version = "0.1.1"
description = "CLI tool that generates Conventional Commits messages from staged git diffs using a local Ollama model."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Zeynep Günal", email = "zeynepgunall@outlook.com" }]
dependencies = ["click", "requests"] 
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Topic :: Software Development :: Version Control :: Git",
]

[project.urls]
"Homepage" = "https://github.com/zeynepgunall/dboss-cli"
"Bug Tracker" = "https://github.com/zeynepgunall/dboss-cli/issues"

[project.scripts]
dboss = "dboss.cli:main"

[project.optional-dependencies]
dev = ["pytest", "pytest-mock"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/dboss"]

[dependency-groups]
dev = [
    "ruff>=0.15.20",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.ruff.lint.isort]
known-first-party = ["dboss"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"